2011-02-19  Charlie Reis  <creis@chromium.org>

        Reviewed by Mihai Parparita.

        Ensure loading has stopped in HistoryController::goToItem
        https://bugs.webkit.org/show_bug.cgi?id=54517

        Add a FrameLoaderClient callback for whether to stop loading before goToItem.

        Test: http/tests/navigation/forward-to-fragment-fires-onload.html

        * WebCoreSupport/FrameLoaderClientEfl.cpp:
        (WebCore::FrameLoaderClientEfl::shouldStopLoadingForHistoryItem): Added.
        * WebCoreSupport/FrameLoaderClientEfl.h:

2011-02-18  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Kent Tamura.

        [EFL] Fix coding style errors in ewk_frame.h
        https://bugs.webkit.org/show_bug.cgi?id=54718

        Fix style errors in ewk_frame.h.

        * ewk/ewk_frame.h:

2011-02-18  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Antonio Gomes.

        [EFL] Remove proxy feature of soup when proxy is null
        https://bugs.webkit.org/show_bug.cgi?id=54621

        When proxy value is NULL, remove proxy feature in soup.

        * ewk/ewk_settings.cpp:
        (ewk_settings_proxy_uri_set):

2011-02-18  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        Reviewed by Kent Tamura.

        [EFL] Fix coding style errors in ewk_view.h
        https://bugs.webkit.org/show_bug.cgi?id=54624

        Fix style errors in ewk_view.h.

        * ewk/ewk_view.cpp:
        (ewk_view_pre_render_relative_radius):
        * ewk/ewk_view.h:

2011-02-18  Patrick Gansterer  <paroga@webkit.org>

        Unreviewed build fix after r78634 and r78786.

        * CMakeListsEfl.txt:

2011-02-17  Ryuan Choi  <ryuan.choi@samsung.com>

        Reviewed by Kent Tamura.

        [EFL] Possible crash of ewk_frame_contents_set
        https://bugs.webkit.org/show_bug.cgi?id=54091

        Use length of contents if contents_size parameter is bigger than length
        of contents.

        * ewk/ewk_frame.cpp: